# chilean-insurance-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: decisions.md  journal.md
scripts/: smoke_test.py
