[project]
name = "chilean-insurance-rag"
version = "0.1.0"
description = "A RAG system for querying Chilean insurance regulation (CMF) with mandatory citations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
]
